[BACK] add before and after query param to GET /fixtures + optional league param
